--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,7 @@ header img {
   background-color: var(--primary);
   border-radius: 2px;
   font-weight: bold;
+  text-align: center;
 }
 
 .button-large {
@@ -150,4 +151,24 @@ input[type=file] {
 
 .error {
   color: red;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 16px;
+  border-radius: 3px;
+  border: solid 1px #ccc;
+  padding: 4px;
+  margin: -4px;
+  text-align: center;
+  color: white;
+}
+
+.progress-bar > div {
+  height: 100%;
+  background-color: #3bbd3b;
+}
+
+.progress-bar .progress-text {
+  position: absolute;
 }
